feat: Implement stock process concurrency control with transaction-based lock